// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Me Conversation concerning items doesnt return invalid items 1`] = `
Array [
  Object {
    "item": Object {
      "__typename": "Show",
      "is_reference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning items returns the conversation items 1`] = `
Array [
  Object {
    "item": Object {
      "__typename": "Artwork",
      "is_acquireable": true,
    },
    "title": "Pwetty Cats",
  },
  Object {
    "item": Object {
      "__typename": "Show",
      "is_reference": true,
    },
    "title": "Catty Show",
  },
]
`;

exports[`Me Conversation concerning unread indicator returns the right unread status 1`] = `
Object {
  "is_last_message_to_user": true,
  "last_message_delivery_id": "2",
  "last_message_open": "2020-12-31T12:00:00+00:00",
}
`;

exports[`Me Conversation returns a conversation 1`] = `
Object {
  "conversation": Object {
    "from": Object {
      "email": "collector@example.com",
    },
    "id": "420",
    "initial_message": "Loved some of the works at your fair booth!",
    "last_message_id": "25",
    "messages": Object {
      "edges": Array [
        Object {
          "node": Object {
            "body": "I'm a cat",
            "deliveries": null,
            "from": Object {
              "email": "fancy_german_person@posteo.de",
              "name": "Percy Z",
            },
            "id": "240",
            "invoice": Object {
              "__id": "SW52b2ljZTox",
              "id": "1",
              "payment_url": "https://www.adopt-cats.org/adopt-all-the-cats",
              "state": "UNPAID",
              "total": "$4,200",
            },
            "is_from_user": true,
            "is_invoice": true,
          },
        },
        Object {
          "node": Object {
            "body": "",
            "deliveries": null,
            "from": Object {
              "email": "postman@posteo.de",
              "name": "Bitty Z",
            },
            "id": "241",
            "invoice": null,
            "is_from_user": false,
            "is_invoice": false,
          },
        },
        Object {
          "node": Object {
            "body": null,
            "deliveries": null,
            "from": Object {
              "email": "fancy_german_person+wunderbar@posteo.de",
              "name": "Matt Z",
            },
            "id": "242",
            "invoice": null,
            "is_from_user": true,
            "is_invoice": false,
          },
        },
        Object {
          "node": Object {
            "body": null,
            "deliveries": Array [
              Object {
                "opened_at": "2020-12-31T12:00:00+00:00",
              },
            ],
            "from": Object {
              "email": "postman+wunderlich@posteo.de",
              "name": null,
            },
            "id": "243",
            "invoice": null,
            "is_from_user": false,
            "is_invoice": false,
          },
        },
      ],
    },
    "unread": true,
  },
}
`;
